--- a/HTMLPage.html
+++ b/HTMLPage.html
@@ -5,23 +5,40 @@
     <style>
       * { margin: 0; padding: 0; box-sizing: border-box; }
       body { font: 13px Helvetica, Arial; }
-      form { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
-      form input { border: 0; padding: 10px; width: 90%; margin-right: .5%; }
-      form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
+      form#chat { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
+      form input#m { border: 0; padding: 10px; width: 90%; margin-right: .5%; }
+      form#chat button#bn { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
       #messages { list-style-type: none; margin: 0; padding: 0; }
       #messages li { padding: 5px 10px; }
       #messages li:nth-child(odd) { background: #eee; }
     </style>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
   </head>
   <body>
     <ul id="messages"></ul>
-    <form action="">
-      <input id="m" autocomplete="off" /><button>Send</button>
+    <form action="" id="chat">
+      <input id="m" autocomplete="off" /><button id="bn">Send</button>
     </form>
     <script src="/socket.io/socket.io.js"></script>
     <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
     <script>
       var socket = io();
+    $( document ).ready(function() {
+      $('#clientIDModal').modal('show');
+      console.log($('#idForm'));
+      $('#idSubmitBtn').click(function() {
+        $('#idForm').submit();
+      });
+
+      $('#idForm').submit(function(event) {
+        console.log($('#useridinput').val());
+        socket.emit('user joined' , $('#useridinput').val());
+        $('#clientIDModal').modal('hide');
+        return false;
+        });
+      });
+
       $('form').submit(function(){
         socket.emit('chat message', $('#m').val());
         $('#m').val('');
@@ -31,5 +48,32 @@
         $('#messages').append($('<li>').text(msg));
       });
     </script>
+
+    <!-- modal -->
+
+    <div class="modal fade" id="clientIDModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title" id="myModalLabel"> </h4>
+          </div>
+          <div class="modal-body">
+          <form class="" id="idForm">
+          <div class="form-group">
+            <label for="id">Your id</label>
+            <input type="text" class="form-control"  placeholder="" id="useridinput">
+          </div>
+          </form>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            <button type="submit" class="btn btn-primary" id="idSubmitBtn">Submit</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- end modal -->
   </body>
 </html>
